# name: TestCreate.test_force_reset[False]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'bill',
    'last_password_change': <class 'datetime'>,
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: TestCreate.test_force_reset[True]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': True,
    'groups': <class 'list'> [
    ],
    'handle': 'bill',
    'last_password_change': <class 'datetime'>,
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: TestCreate.test_no_force_reset
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'bill',
    'last_password_change': <class 'datetime'>,
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: TestUpdate.test_administrator[False][mongo]
  <class 'dict'> {
    '_id': 'bf1b993c',
    'active': True,
    'administrator': True,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': <class 'datetime'>,
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestUpdate.test_administrator[False][obj]
  <class 'dict'> {
    'active': True,
    'administrator': True,
    'administrator_role': <AdministratorRole.FULL: 'full'>,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': <class 'datetime'>,
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: TestUpdate.test_administrator[True][mongo]
  <class 'dict'> {
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': <class 'datetime'>,
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestUpdate.test_administrator[True][obj]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': <class 'datetime'>,
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: TestUpdate.test_password[db]
  <class 'dict'> {
    '_id': 'abc123',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
      'peasants',
    ],
    'handle': 'bob',
    'invalidate_sessions': True,
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'primary_group': '',
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestUpdate.test_password[obj]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'bob',
    'id': 'abc123',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: TestUpdate.test_set_groups[mongo_1]
  <Future pending cb=[_chain_future.<locals>._call_check_cancel() at /home/igboyes/.pyenv/versions/3.10.11/lib/python3.10/asyncio/futures.py:385]>
---
# name: TestUpdate.test_set_groups[mongo_2]
  <class 'dict'> {
    '_id': '7cf872dc',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
      'fb085f7f',
    ],
    'handle': 'qtaylor',
    'invalidate_sessions': False,
    'last_password_change': <class 'datetime'>,
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestUpdate.test_set_groups[mongo_3]
  <class 'dict'> {
    '_id': '7cf872dc',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
      'fb085f7f',
      'bf1b993c',
    ],
    'handle': 'qtaylor',
    'invalidate_sessions': False,
    'last_password_change': <class 'datetime'>,
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestUpdate.test_set_groups[mongo_4]
  <class 'dict'> {
    '_id': '7cf872dc',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'qtaylor',
    'invalidate_sessions': False,
    'last_password_change': <class 'datetime'>,
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestUpdate.test_set_groups[obj_1]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'qtaylor',
    'id': '7cf872dc',
    'last_password_change': <class 'datetime'>,
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: TestUpdate.test_set_groups[obj_2]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
      },
    ],
    'handle': 'qtaylor',
    'id': '7cf872dc',
    'last_password_change': <class 'datetime'>,
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: TestUpdate.test_set_groups[obj_3]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
      },
      <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
      },
    ],
    'handle': 'qtaylor',
    'id': '7cf872dc',
    'last_password_change': <class 'datetime'>,
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: TestUpdate.test_set_groups[obj_4]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'qtaylor',
    'id': '7cf872dc',
    'last_password_change': <class 'datetime'>,
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: test_find_or_create_b2c_user[False]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': 'Fred',
    'b2c_family_name': 'Smith',
    'b2c_given_name': 'Fred',
    'b2c_oid': 'abc123',
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': <class 'str'>,
    'id': 'fb085f7f',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: test_find_or_create_b2c_user[True]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': 'Bilbo',
    'b2c_family_name': 'Baggins',
    'b2c_given_name': 'Bilbo',
    'b2c_oid': 'abc123',
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': <class 'str'>,
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: test_find_users[False-None]
  <class 'dict'> {
    'found_count': 1,
    'items': <class 'list'> [
      <class 'dict'> {
        'active': True,
        'administrator': False,
        'administrator_role': None,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'diamond21',
        'id': 'da42dca3',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': None,
      },
    ],
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[False-missing-handle]
  <class 'dict'> {
    'found_count': 0,
    'items': <class 'list'> [
    ],
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[False-test_user]
  <class 'dict'> {
    'found_count': 0,
    'items': <class 'list'> [
    ],
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[None-None]
  <class 'dict'> {
    'found_count': 3,
    'items': <class 'list'> [
      <class 'dict'> {
        'active': True,
        'administrator': False,
        'administrator_role': None,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'diamond21',
        'id': 'da42dca3',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': None,
      },
      <class 'dict'> {
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.FULL: 'full'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'juliewilliams',
        'id': '3cbb22cc',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': None,
      },
      <class 'dict'> {
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.BASE: 'base'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': <class 'list'> [
          <class 'dict'> {
            'id': 'fb085f7f',
            'name': 'hydrogeologists',
          },
          <class 'dict'> {
            'id': 'bf1b993c',
            'name': 'musicians',
          },
        ],
        'handle': 'test_user',
        'id': '7cf872dc',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': None,
      },
    ],
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[None-missing-handle]
  <class 'dict'> {
    'found_count': 0,
    'items': <class 'list'> [
    ],
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[None-test_user]
  <class 'dict'> {
    'found_count': 1,
    'items': <class 'list'> [
      <class 'dict'> {
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.BASE: 'base'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': <class 'list'> [
          <class 'dict'> {
            'id': 'fb085f7f',
            'name': 'hydrogeologists',
          },
          <class 'dict'> {
            'id': 'bf1b993c',
            'name': 'musicians',
          },
        ],
        'handle': 'test_user',
        'id': '7cf872dc',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': None,
      },
    ],
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[True-None]
  <class 'dict'> {
    'found_count': 2,
    'items': <class 'list'> [
      <class 'dict'> {
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.FULL: 'full'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'juliewilliams',
        'id': '3cbb22cc',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': None,
      },
      <class 'dict'> {
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.BASE: 'base'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': <class 'list'> [
          <class 'dict'> {
            'id': 'fb085f7f',
            'name': 'hydrogeologists',
          },
          <class 'dict'> {
            'id': 'bf1b993c',
            'name': 'musicians',
          },
        ],
        'handle': 'test_user',
        'id': '7cf872dc',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': None,
      },
    ],
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[True-missing-handle]
  <class 'dict'> {
    'found_count': 0,
    'items': <class 'list'> [
    ],
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[True-test_user]
  <class 'dict'> {
    'found_count': 1,
    'items': <class 'list'> [
      <class 'dict'> {
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.BASE: 'base'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': <class 'list'> [
          <class 'dict'> {
            'id': 'fb085f7f',
            'name': 'hydrogeologists',
          },
          <class 'dict'> {
            'id': 'bf1b993c',
            'name': 'musicians',
          },
        ],
        'handle': 'test_user',
        'id': '7cf872dc',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': None,
      },
    ],
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_set_administrator_role[None][obj]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: test_set_administrator_role[base][obj]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': <AdministratorRole.BASE: 'base'>,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: test_set_administrator_role[full][obj]
  <class 'dict'> {
    'active': True,
    'administrator': True,
    'administrator_role': <AdministratorRole.FULL: 'full'>,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
